@@ -1,4 +1,5 @@
 201x-xx-xx:
+    * add option 'newtaburl' to set default URL in new tabs
 
 2016-10-05:
     * update and fix css related issues
